28Aug00=======================================================================
1. changes DXChannel::get_all_ak1a to get_all_nodes.
26Aug00=======================================================================
1. make blank origins on messages the node call.
2. added new version of FAQ from Ian G0VGS
3. added a dummy PC75 command (WCY merge?)
4. Don't allow mail routing for clx nodes
5. Log isolates
25Aug00=======================================================================
1. moan about and then delete empty message files
24Aug00=======================================================================
1. Removed WWV command so that users can't interfere (read mess up) the
automatic feeds which come from various places on the net.
23Aug00=======================================================================
1. Added persistant dupe file so that all dupes are stored here (including
announces) - announces are now kept for 5 days (as default).
2. limit the characters stored in a dupe for spots and announces
20Aug00=======================================================================
1. Added system Alias for set/nodxgrid => unset/dxgrid
2. Add full individual checking for all PC protocol fields in all messages
and removed any language dependant stuff (hopefully).
3. console.pl is now a bit more international (client.c/pl already are)
19Aug00=======================================================================
1. Added an efficiency thing for AUTOLOADed accessors from OO Perl by Conway.
2. Fiddled with the rtty and digital bandplan frequencies.
18Aug00=======================================================================
1. added a couple of changes for perl 5.6.0
2. removed del_dup from DXUser for earlier versions of DB '1.85' (ie real ones
not 2.x versions in 1.85 compatibility mode).
3. Started the OOing of the PC protocol stuff.
15Aug00=======================================================================
1. added 1.25 of the admin manual html